--- a/src/components/main-card/MainCard.module.css
+++ b/src/components/main-card/MainCard.module.css
@@ -1,5 +1,7 @@
 .card{
   max-width: 350px;
   height: 385px;
-  background-color: blue;
+  /* background-color: blue; */
+  /* padding: 14px; */
+  box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.330);
 }
