--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 *{
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   box-sizing: border-box;
   font-family: sans-serif;
   list-style-type: none;
