--- a/src/components/main-card/MainCard.module.css
+++ b/src/components/main-card/MainCard.module.css
@@ -1,7 +1,25 @@
-.card{
+.card {
   max-width: 350px;
   height: 385px;
-  /* background-color: blue; */
-  /* padding: 14px; */
-  box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.330);
+  box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.33);
+  padding: 12px;
+}
+.card h2 {
+  margin-bottom: -28px;
+}
+.card img {
+  max-width: 100%;
+  margin-bottom: 0px;
+}
+.card p {
+  font-size: 14px;
+  color: rgb(0, 208, 255);
+  cursor: pointer;
+  margin: 0;
+}
+.card a {
+  font-size: 14px;
+  color: rgb(0, 208, 255);
+  cursor: pointer;
+  margin-top: 20px;
 }
