--- a/src/components/hero-banner/HeroBanner.module.css
+++ b/src/components/hero-banner/HeroBanner.module.css
@@ -1,45 +1,44 @@
-.banner {
-  width: 98%;
+.banner{
+  width: 100%;
   height: 700px;
-  background-color: #ffff;
+  max-width: 1440px;
   margin: 0px auto;
   position: relative;
   display: flex;
 }
 
-.image__container {
+.image__container{
   width: 100%;
   align-items: flex-start;
   display: flex;
   height: 700px;
-  overflow: hidden;
+  overflow: auto;
   scroll-behavior: smooth;
   position: relative;
 }
 
-.banner__image {
+.banner__image{
   width: 100%;
-  -webkit-mask-image: linear-gradient(180deg, rgb(72, 72, 72) 20%, #00000000);
-  mask-image: linear-gradient(180deg, #000 30%, #00000000);
+  -webkit-mask-image: linear-gradient(180deg,rgb(72, 72, 72) 20%,#00000000);
+  mask-image: linear-gradient(180deg,#000 30%,#00000000);
 }
 
-.image__coontainer::after {
+.image__coontainer::after{
   position: absolute;
-  content: "";
+  content: '';
   height: 280px;
   width: 100%;
-  background: rgb(5, 5, 5);
-  background: linear-gradient(180deg, rgba(5, 5, 5, 0) 0%, #eaeded 78%);
+  background: rgb(5,5,5);
+  background: linear-gradient(180deg, rgba(5,5,5,0) 0%, #EAEDED 78%);
   bottom: 0;
 }
 
-.left_btn {
+.left_btn{
   width: 60px;
   height: 250px;
   position: absolute;
-  top: 25%;
   left: 5px;
-  font-size: 40px;
+  font-size: 60px;
   background-color: transparent;
   border: none;
   color: #000;
@@ -47,40 +46,20 @@
   z-index: 5;
 }
 
-.right_btn {
+.right_btn{
   width: 60px;
   height: 250px;
   border-radius: 3px;
   position: absolute;
-  top: 25%;
   right: 5px;
-  font-size: 40px;
+  font-size: 60px;
   background-color: transparent;
   border: none;
   color: #000;
   z-index: 5;
 }
 
-.right_btn:focus,
-.left_btn:focus {
+.right_btn:focus, .left_btn:focus{
   color: #fff;
-  box-shadow: inset 0 0 0 2px #fff, inset 0 0 0 4px #008296;
-}
-
-.dots {
-  display: flex;
-  position: absolute;
-  bottom: 300px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.point {
-  width: 10px;
-  height: 10px;
-  background-color: #a2a2a2;
-  border-radius: 50%;
-  margin: 0px 5px;
-  cursor: pointer;
-  transition: 0.5s;
+  box-shadow: inset 0 0 0 2px #fff, inset 0 0 0 4px #008296;;
 }
