--- a/src/components/hero-banner/HeroBanner.module.css
+++ b/src/components/hero-banner/HeroBanner.module.css
@@ -1,4 +1,4 @@
-.banner{
+.banner {
   width: 100%;
   height: 700px;
   max-width: 1440px;
@@ -7,7 +7,7 @@
   display: flex;
 }
 
-.image__container{
+.image__container {
   width: 100%;
   align-items: flex-start;
   display: flex;
@@ -15,25 +15,26 @@
   overflow: auto;
   scroll-behavior: smooth;
   position: relative;
+  overflow: hidden;
 }
 
-.banner__image{
+.banner__image {
   width: 100%;
-  -webkit-mask-image: linear-gradient(180deg,rgb(72, 72, 72) 20%,#00000000);
-  mask-image: linear-gradient(180deg,#000 30%,#00000000);
+  -webkit-mask-image: linear-gradient(180deg, rgb(72, 72, 72) 20%, #00000000);
+  mask-image: linear-gradient(180deg, #000 30%, #00000000);
 }
 
-.image__coontainer::after{
+.image__coontainer::after {
   position: absolute;
-  content: '';
+  content: "";
   height: 280px;
   width: 100%;
-  background: rgb(5,5,5);
-  background: linear-gradient(180deg, rgba(5,5,5,0) 0%, #EAEDED 78%);
+  background: rgb(5, 5, 5);
+  background: linear-gradient(180deg, rgba(5, 5, 5, 0) 0%, #eaeded 78%);
   bottom: 0;
 }
 
-.left_btn{
+.left_btn {
   width: 60px;
   height: 250px;
   position: absolute;
@@ -46,7 +47,7 @@
   z-index: 5;
 }
 
-.right_btn{
+.right_btn {
   width: 60px;
   height: 250px;
   border-radius: 3px;
@@ -59,7 +60,8 @@
   z-index: 5;
 }
 
-.right_btn:focus, .left_btn:focus{
+.right_btn:focus,
+.left_btn:focus {
   color: #fff;
-  box-shadow: inset 0 0 0 2px #fff, inset 0 0 0 4px #008296;;
+  box-shadow: inset 0 0 0 2px #fff, inset 0 0 0 4px #008296;
 }
