--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -37,7 +37,7 @@
   height: 40px;
 }
 .footer__lang select,
-p {
+.lang__usd {
   font-family: inherit;
   display: inline-block !important;
   border: 1px solid #848688;
