--- a/src/routes/products-info/products.module.css
+++ b/src/routes/products-info/products.module.css
@@ -1,13 +1,15 @@
 .productInfo__wrapper {
   display: flex;
+  background-color: #fff;
+  padding-top: 30px;
 }
 
 .image__wrapper {
   width: 100px;
   height: 400px;
-  background-color: red;
   display: flex;
   flex-direction: column;
+  transition: all 1s ease-in;
   gap: 10px 0;
   padding: 10px;
 }
@@ -57,5 +59,5 @@
 .preview {
   width: 400px;
   height: 400px;
-  background-color: blue;
+  box-shadow: rgba(0, 0, 0, 0.5);
 }
