--- a/src/routes/products-info/products.module.css
+++ b/src/routes/products-info/products.module.css
@@ -13,6 +13,10 @@
   gap: 10px 0;
   padding: 10px;
 }
+svg {
+  color: yellow;
+  margin-bottom: 20px;
+}
 
 .imageItem {
   width: 100%;
@@ -31,8 +35,10 @@
   height: 500px;
   position: relative;
   cursor: pointer;
-  background-color: red;
   overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 1px 3px 7px #00000098;
+  margin-top: 10px;
 }
 
 .tracker {
@@ -42,12 +48,20 @@
   position: absolute;
   pointer-events: none;
 }
-
+.image__title {
+  margin: 20px 0;
+  font-family: monospace;
+  font-size: 32px;
+}
 .tracker > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   filter: brightness(400%);
+}
+.ratings {
+  background-color: rgb(71, 46, 46);
+  margin-bottom: 20px;
 }
 
 .mainImage {
