--- a/src/routes/products-info/products.module.css
+++ b/src/routes/products-info/products.module.css
@@ -71,7 +71,20 @@ svg {
 }
 
 .preview {
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: 500px;
   box-shadow: rgba(0, 0, 0, 0.5);
+  margin-top: 10px;
+  margin-left: 50px;
+}
+.nothing__found {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: blue;
+}
+.nothing__found img {
+  margin: 0 auto;
 }
